<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_collection_quiz"
            android:icon="@drawable/ic_baseline_checklist_24"
            android:title="@string/menu_collectionquiz" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/menu_createquiz" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/report_screen" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>