<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fit.quizcrafter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_collection_quiz"
        android:name="com.fit.quizcrafter.ui.quizcollection.CollectionQuiz"
        android:label="@string/menu_collectionquiz"
        tools:layout="@layout/fragment_collection_quiz" />

    <fragment
        android:id="@+id/nav_create"
        android:name="com.fit.quizcrafter.ui.createquiz.CreateQuizFragment"
        android:label="@string/menu_createquiz"
        tools:layout="@layout/fragment_create_quiz" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.fit.quizcrafter.report.Reports"
        android:label="@string/report_screen"
        tools:layout="@layout/reports" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.fit.quizcrafter.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />




</navigation>