<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reports"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_marginTop="10dp"
        android:paddingRight="300dp"
        android:text="<     "
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/chart_type"
        android:textSize="18dp"
        />
    <Spinner
        android:id="@+id/chartSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/end_date"
            android:textSize="18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/startSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            />
        <Spinner
            android:id="@+id/endSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:text="Generate Chart"
        android:textSize="18dp"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/chartFragment"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
